feat: Update dependencies and add new features for Kavach app
- Added new dependencies: @ba3a-g/kavach, @noble/curves, @react-native-async-storage/async-storage, @react-navigation/native, @react-navigation/stack, buffer, expo, expo-camera, react-native-get-random-values, react-native-qrcode-svg, react-native-screens, react-native-svg.
- Updated existing dependencies to their latest versions.
- Introduced new TypeScript configuration to include node types.
- Created App_old.tsx as the main application entry point with navigation setup.
- Developed HomeScreen and ScannerScreen components for data display and QR code scanning functionality.
- Implemented crypto utilities for encoding and signing data, including Encoder and Signer classes.
- Added utility functions for fetching and storing PEM files in AsyncStorage.
- Enhanced error handling and user feedback in the application.

--- a/app.json
+++ b/app.json
@@ -1,4 +1,16 @@
 {
   "name": "Kavach",
-  "displayName": "Kavach"
+  "displayName": "Kavach",
+  "expo": {
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ]
+    ]
+  }
 }
