--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ba3a-g/kavach": "^0.0.2",
+    "@noble/curves": "^2.0.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.81.4",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
+    "buffer": "^6.0.3",
+    "expo": "~54.0.0",
+    "expo-camera": "~17.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-qrcode-svg": "^6.3.15",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.13.0",
     "react-native-wifi-p2p": "^3.6.0"
   },
   "devDependencies": {
@@ -28,8 +40,10 @@
     "@react-native/metro-config": "0.81.4",
     "@react-native/typescript-config": "0.81.4",
     "@types/jest": "^29.5.13",
+    "@types/node": "^24.5.2",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-preset-expo": "~54.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
