--- a/ios/Kavach.xcodeproj/xcshareddata/xcschemes/Kavach.xcscheme
+++ b/ios/Kavach.xcodeproj/xcshareddata/xcschemes/Kavach.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Kavach.app"
-               BlueprintName = "Kavach"
-               ReferencedContainer = "container:Kavach.xcodeproj">
+               BuildableName = "kavach.app"
+               BlueprintName = "kavach"
+               ReferencedContainer = "container:kavach.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "KavachTests.xctest"
-               BlueprintName = "KavachTests"
-               ReferencedContainer = "container:Kavach.xcodeproj">
+               BuildableName = "kavachTests.xctest"
+               BlueprintName = "kavachTests"
+               ReferencedContainer = "container:kavach.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Kavach.app"
-            BlueprintName = "Kavach"
-            ReferencedContainer = "container:Kavach.xcodeproj">
+            BuildableName = "kavach.app"
+            BlueprintName = "kavach"
+            ReferencedContainer = "container:kavach.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Kavach.app"
-            BlueprintName = "Kavach"
-            ReferencedContainer = "container:Kavach.xcodeproj">
+            BuildableName = "kavach.app"
+            BlueprintName = "kavach"
+            ReferencedContainer = "container:kavach.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
